# WinSTT

./: .cursorignore  .gitattributes  .gitignore  .mypy_core.txt  .pre-commit-config.yaml  .prettierignore  .prettierrc  AGENTS.md  BUILD.md  CHANGELOG.md  CHECKLIST.md  CLAUDE.md  CLEANUP_REPORT.md  CONTRIBUTING.md  FORK_PROCESS_GUIDE.md  HANDY_VS_WINSTT_AUDIT.md  LICENSE  README.md  Recorder.py  TESTING.md  THIRD_PARTY_NOTICES.md  UPDATE_README.md  autopyexeconfig.json  doctor.config.json  env-gpu.yaml  env-gpu.yml  env.yaml  env.yml  eslint.config.js  index.html  knip.json  listener.py  package.json  playwright.a11y.config.ts  pyproject.toml  refactoring_plan.md  requirements-gpu.txt  requirements.txt  requirements_py313.txt  ruff_status.txt  (+19 more)
app/src-tauri/: Cargo.toml  PARITY_INTEGRATION.md  build.rs  parity_impl_wave1.js  tauri.conf.json
app/src-tauri/capabilities/: default.json  desktop.json
app/src-tauri/icons/: icon.icns
app/src-tauri/resources/: default_settings.json
app/src-tauri/scripts/: generate-winstt-icons.py
app/src-tauri/src/: actions.rs  apple_intelligence.rs  cli.rs  lib.rs  llm_client.rs  overlay.rs  portable.rs  settings.rs  signal_handle.rs  tray.rs  tray_i18n.rs
app/src-tauri/src/audio_toolkit/: text.rs
app/src-tauri/src/commands/: audio.rs  mod.rs
app/src-tauri/src/managers/: audio.rs  history.rs  transcription.rs  transcription_mock.rs
app/src-tauri/src/shortcut/: handler.rs  mod.rs
app/src-tauri/src/winstt/: cloud_stt.rs  context.rs  diarization.rs  endpointing.rs  loopback.rs  mod.rs  realtime_stabilizer.rs  settings_schema.rs  wakeword.rs  word_timestamps.rs
app/src-tauri/swift/: apple_intelligence.swift
server/: .coverage  CLAUDE.md  ERROR_HANDLING_AUDIT.md  ERROR_HANDLING_FIXES.md  Makefile  pyproject.toml  startup_log.txt
server/docs/: tokei_output.txt
server/packaging/: build-portable.ps1  build.ps1  build_tts_pack.py  stt-server.spec
server/packaging/hooks/: hook-webrtcvad.py
server/packaging/portable-launcher-dotnet/: PortableLauncher.csproj
server/scratch/: bench_cuda.py  bench_fp16_crossover.json  bench_fp16_crossover.py  bench_quant_matrix.py  bench_results.json  bench_whisper_tiny_en.py  bench_xenova_mirrors.py  quant_recommendations.json
server/scripts/: _model_param_counts.json  bench_combo.py  bench_cuda_opts.py  bench_matrix.py  bench_prompt_bias.py  bench_sess_opts.py  bench_vad_path.py  benchmark_ep.py  crap.py  measure_model_params.py  mutmut_module.sh  refresh_catalog.py
server/scripts/crap/: __init__.py  analyzer.py  formatter.py  method_parser.py
server/src/building_blocks/: clock.py  errors.py  terminal.py  types.py  worker.py
server/src/recorder/: __init__.py  bootstrap.py  client.py
server/src/recorder/application/: diarization_stream.py  dto.py  pipeline.py  realtime_stabilizer.py  recorder_service.py  swap_benchmark.py  vad_calibrator.py  wav_writer.py
server/src/recorder/domain/: audio_buffer.py  catalog.json  catalog_overlay.py  catalog_refresh.py  config.py  custom_models.py  errors.py  events.py  model_registry.py  speaker_timeline.py  swap_errors.py
server/src/recorder/text/: __init__.py  (+2 more)
server/src/stt_server/: __init__.py  callbacks.py  cli.py  control_handler.py  data_handler.py  file_transcribe.py  loopback.py  observability.py  server.py  state.py  text_processing.py  tts_handler.py
server/src/synthesizer/: __init__.py  bootstrap.py
server/tests/: conftest.py
server/tests/.profile_runs/: abort_mid_recording.json  abort_recover.json  long_no_hang.json  ollama_transition.json
server/tests/fakes/: __init__.py  fake_audio_source.py  fake_sentence_classifier.py  fake_transcriber.py  fake_vad.py  fake_wake_word.py
server/tests/integration/: test_data_dir.py  test_loopback_capture.py  test_observability.py  test_onnxasr_transcriber.py  test_stream_demo_e2e.py
server/tests/unit/: test_clock.py  test_errors.py
src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  deny.toml  tauri.conf.json
src-tauri/bench_audio/: asr_ref.f32  jfk_short_3s.f32  short_1p8s.f32
src-tauri/capabilities/: default.json  desktop.json  history.json  settings.json  tray-menu.json
src-tauri/examples/: dictation_prompt_cases.rs  export_settings_fixture.rs  kokoro_tts_bench.rs  stt_decode_bench.rs  stt_spike.rs  tts_engine_bench.rs  tts_engine_spike.rs  tts_spike.rs  wakeword_bench.rs
src-tauri/nsis/: installer.nsi
src-tauri/resources/models/: gigaam_vocab.txt
src-tauri/scripts/: generate-winstt-icons.py
src-tauri/src/: actions.rs  apple_intelligence.rs  audio_feedback.rs  autostart.rs  cli.rs  clipboard.rs  cloud_llm.rs  command_auth.rs  commands_registry.rs  input.rs  lib.rs  llm_client.rs  main.rs  overlay.rs  portable.rs  settings.rs  signal_handle.rs  splash.rs  startup.rs  transcription_coordinator.rs  tray.rs  tray_indicator.rs  utils.rs  window_state.rs  windows_com.rs
src-tauri/src/actions/: misc_actions.rs  post_process.rs  transcribe.rs
src-tauri/src/audio_toolkit/: mod.rs  text.rs
src-tauri/src/bootstrap/: mod.rs  plugins.rs  state.rs
src-tauri/src/commands/: audio.rs  cleanup.rs  history.rs  mod.rs  models.rs  transcription.rs
src-tauri/src/helpers/: clamshell.rs  mod.rs  regex.rs
src-tauri/src/managers/: audio.rs  history.rs  mod.rs  model.rs  transcription.rs
src-tauri/src/settings/: defaults.rs  store.rs  types.rs
src-tauri/src/shortcut/: accelerator_commands.rs  handler.rs  handy_keys.rs  mod.rs  modifier_combo.rs  post_process_commands.rs  priority.rs  ptt_release_watchdog.rs  settings_commands.rs  tauri_impl.rs
src-tauri/src/winstt/: audio_conditioning.rs  audio_device_watcher.rs  cancel_registry.rs  catalog.rs  cleanup.rs  cloud_stt.rs  composite_vad.rs  context.rs  diarization.rs  downloads.rs  ducking.rs  endpointing.rs  loopback.rs  mod.rs  model_swap.rs  model_watchdog.rs  observability.rs  ollama_client.rs  paste_ext.rs  realtime_stabilizer.rs  settings_schema.rs  settings_store.rs  snippets.rs  sync_ext.rs  vad_calibrator.rs  wakeword.rs  word_timestamps.rs
src-tauri/swift/: apple_intelligence_bridge.h  apple_intelligence_stub.swift
(+5159 files in other folders)
