[project]
name = "winstt-server"
version = "0.1.0"
requires-python = ">=3.11"
# Core dependencies — no torch, no torchaudio, no faster_whisper. The
# transcription stack is onnx-asr-only after Track B step 1. Pick a GPU
# story via the ``cpu`` or ``gpu`` extra below.
dependencies = [
    "kink>=0.6.5,<0.7",
    "pydantic>=2.0",
    "PyAudio>=0.2.14",
    "PyAudioWPatch>=0.2.12",
    "pvporcupine>=1.9.5",
    "webrtcvad-wheels>=2.0.14",
    "scipy>=1.15.2",
    "openwakeword>=0.4.0",
    "numpy",
    "soundfile>=0.13.1",
    "psutil>=5.9",
    "rich>=13.0",
    "keyboard>=0.13.5",
    "pyautogui>=0.9.54",
    "pyperclip>=1.8",
    "colorama>=0.4.6",
    "websockets>=16.0",
    "onnx-asr[hub]",
]

[project.optional-dependencies]
# CPU-only ORT — recommended for SaaS / horizontal scaling. Smallest install.
cpu = ["onnxruntime>=1.18.1"]
# GPU build — onnxruntime-gpu + NVIDIA's pip-distributed CUDA libs so a
# torch-free install still has cuDNN 9 / cuBLAS 12 on disk. Without these
# wheels you'd get ``cublasLt64_12.dll missing`` from ORT at session
# create time (the symptoms the torch import used to hide). The runtime
# ``_inject_cuda_dlls`` hook in ``src/recorder/infrastructure/device.py``
# adds the wheel directories to Python's DLL search path before ORT loads.
gpu = [
    "onnxruntime-gpu>=1.18.1",
    "nvidia-cublas-cu12>=12.4",
    "nvidia-cudnn-cu12>=9.0",
    "nvidia-cuda-runtime-cu12>=12.4",
    "nvidia-cuda-nvrtc-cu12>=12.4",
    "nvidia-cufft-cu12>=11.0",
    "nvidia-curand-cu12>=10.3",
    "nvidia-cusparse-cu12>=12.0",
    "nvidia-cusolver-cu12>=11.0",
]
# Optional sentence-finished classifier (DistilBERT via transformers).
# Fail-soft: the adapter falls back to ``is_available() == False`` if these
# aren't installed.
sentence-classifier = ["torch>=2.0", "transformers>=4.30,<5"]

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.0",
    "mypy>=1.8",
    "ruff>=0.3",
    "pre-commit>=3.0",
    # PyInstaller is the packager for the standalone ``stt-server.exe``
    # that the Electron app bundles via ``extraResources``. ``pyinstaller-hooks-contrib``
    # ships the upstream hook for ``huggingface_hub``, ``numpy`` etc. — saves us
    # from writing them by hand. CI installs this group via ``uv sync --group dev``.
    "pyinstaller>=6.5",
    "pyinstaller-hooks-contrib>=2024.7",
]

[tool.uv]
link-mode = "copy"
# CPU and GPU ORT wheels are mutually exclusive — picking both would cause
# DLL conflicts. uv enforces the constraint at resolution time.
conflicts = [[{ extra = "cpu" }, { extra = "gpu" }]]

[tool.uv.sources]
onnx-asr = { path = "../examples/onnx-asr", editable = true }

[project.scripts]
stt-server = "src.stt_server.server:main"
dev = "src.stt_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E","W","F","I","UP","B","SIM","ANN","RUF"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pyaudio.*","pyaudiowpatch.*","webrtcvad.*","pvporcupine.*","openwakeword.*","scipy.*","soundfile.*","websocket.*","websockets.*","colorama.*","tqdm.*","huggingface_hub.*","onnx_asr.*","onnxruntime.*","torch.*","transformers.*","psutil.*","nvidia.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-v --cov=src --cov-report=term-missing --no-cov-on-fail --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
omit = [
    "tests/*",
    "src/building_blocks/terminal.py",
    "src/recorder/infrastructure/*",
    "src/recorder/bootstrap.py",
    "src/recorder/client.py",
    "src/stt_server/*",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_also = [
    "^\\s*\\.\\.\\.\\s*$",
    "pragma: no cover",
]
