[project]
name = "winstt-server"
version = "0.1.0"
requires-python = ">=3.11"
# Core dependencies — no torch, no torchaudio, no faster_whisper. The
# transcription stack is onnx-asr-only after Track B step 1. Pick a GPU
# story via the ``cpu`` or ``gpu`` extra below.
dependencies = [
    "kink>=0.6.5,<0.7",
    "pydantic>=2.0",
    "PyAudio>=0.2.14",
    "PyAudioWPatch>=0.2.12",
    # Pinned to the last access-key-free 1.x line. Picovoice introduced a
    # mandatory `access_key` argument to `pvporcupine.create()` in 2.0, and
    # bundling a hard-coded empty string (or asking every user to sign up
    # at console.picovoice.ai) is friction we don't want for a free desktop
    # app. The reference monolith at examples/RealtimeSTT pins the same
    # version for the same reason.
    "pvporcupine>=1.9.5,<2.0.0",
    "webrtcvad-wheels>=2.0.14",
    "scipy>=1.15.2",
    "openwakeword>=0.4.0",
    "numpy",
    "soundfile>=0.13.1",
    "psutil>=5.9",
    # NVML Python bindings — used by ``recorder.infrastructure.live_resources``
    # to probe per-GPU memory directly instead of shelling out to ``nvidia-smi``.
    # Pure-Python wrapper around libnvidia-ml; lets us apply the per-process
    # sum workaround for Windows WDDM mode (where NVML's aggregate ``used``
    # over-reports by the OS scheduler's reserved chunk). On hosts without
    # an NVIDIA driver, ``nvmlInit()`` fails cleanly and the probe falls
    # back to an empty GPU tuple, so this is safe to ship in CPU builds.
    "nvidia-ml-py>=12.0",
    "websockets>=16.0",
    "onnx-asr[hub]",
    # Pulled transitively by ``onnx-asr[hub]`` (unconstrained there), but we
    # pin the floor at 1.0 directly: 1.x switches the HTTP backend from
    # ``requests`` to ``httpx`` and makes ``hf_xet`` the default transfer
    # manager. Our streaming downloader (``streaming_downloader.py``) only
    # uses the metadata resolvers (``get_hf_file_metadata`` / ``hf_hub_url`` /
    # ``HfApi.list_repo_files``) and ``constants.HF_HUB_CACHE`` — all stable
    # across the 0.x→1.x bump — so the bump is safe. ``swap_errors.py`` also
    # learned the httpx exception class names so network failures still
    # classify correctly. Don't drop below 1.0 without re-checking those.
    "huggingface-hub>=1.0",
    # ``onnx`` is needed by ``recorder.infrastructure.onnx_patch`` to repair
    # malformed onnx-community whisper-*.en fp16 decoder exports in-place in
    # the HF cache (subgraph output names + dtype annotations). Lightweight
    # (~10 MB wheel) and only imported on the fp16 path inside the patcher.
    "onnx>=1.16",
    # Observability — optional Sentry crash reporting. The SDK is always
    # imported by ``src/stt_server/observability.py``; whether it actually
    # phones home is gated on the ``SENTRY_DSN`` env var at runtime.
    "sentry-sdk>=2.18",
    # Fast Levenshtein distance + ratio implementations used by the
    # deterministic custom-word corrector in
    # ``src/recorder/text/dictionary.py``. Pure-C++ extension with prebuilt
    # cross-platform wheels (Win, macOS-arm64, macOS-x86_64, Linux x86_64,
    # Linux aarch64) — the cross-platform port plan piggy-backs on these
    # wheels so the fuzzy layer doesn't need a pure-Python fallback.
    "rapidfuzz>=3.0",
    # Soundex + Metaphone phonetic codes used by the same corrector to
    # boost matches that share a pronunciation but differ in spelling.
    # Ships C-extension wheels with the same cross-platform coverage as
    # rapidfuzz; the package also embeds a pure-Python fallback that runs
    # when no wheel matches the host (e.g. exotic CPython builds).
    "jellyfish>=1.0",
]
# Note: ``pyautogui``, ``keyboard``, ``pyperclip``, ``colorama``, and ``rich``
# used to live here as runtime deps inherited from the original RealtimeSTT
# monolith. None are imported by ``server/src/`` after the hexagonal
# rewrite — paste is handled by the Electron native helper, hotkeys by
# ``uiohook-napi`` in the renderer, and terminal output by inline ANSI
# escapes (see ``building_blocks/terminal.py``). Keeping them around just
# inflated the PyInstaller bundle (~10 MB combined for the CPU flavor).

[project.optional-dependencies]
# CPU-only ORT — recommended for SaaS / horizontal scaling. Smallest install.
cpu = ["onnxruntime>=1.18.1"]
# DirectML build — works on AMD, Intel and NVIDIA GPUs via DirectX 12.
# This is now the DEFAULT Windows GPU flavor (see CLAUDE.md).
#
# ``onnxruntime-directml`` ships the ``DirectML.dll`` inside the wheel,
# so no separate runtime install is needed on the user's box (Windows 10
# 1903+ ships the system D3D12 stack). The bundled exe is ~10x smaller
# than the CUDA flavor (~200 MB vs ~2 GB) because we don't ship the
# NVIDIA CUDA wheel chain.
#
# Steady-state Whisper-tiny q4 latency on RTX 3080 Ti (idle system,
# N=20, 5 warmup): DirectML p50=85 ms / p95=89 ms / stdev=3 ms vs CUDA
# p50=120 ms / p95=151 ms / stdev=37 ms. DirectML wins on consistency
# AND median, while being lighter and vendor-agnostic — hence default.
#
# Note: ``onnxruntime-directml``, ``onnxruntime-gpu`` and ``onnxruntime``
# SHARE the ``onnxruntime/`` package directory; uv's ``conflicts`` table
# below enforces that only one is installed at a time.
directml = ["onnxruntime-directml>=1.18.1"]
# CUDA build — onnxruntime-gpu + the full NVIDIA pip-distributed CUDA lib
# set. Kept as an opt-in alternate flavor for power users on NVIDIA hardware
# who want CUDA's lower minimum latency on long-form / batched workloads.
# Not the default — DirectML is faster steady-state on our workload and
# bundles ~10x smaller (see the ``directml`` extra above for the numbers).
#
# The runtime ``_inject_cuda_dlls`` hook in
# ``src/recorder/infrastructure/device.py`` adds each wheel's ``bin/``
# directory to Python's DLL search path before ORT loads.
#
# ⚠️ Don't try to slim this list by dropping libs that "Whisper doesn't
# use". ORT's CUDA EP delay-loads cufft / cusparse / cusolver / curand at
# session-create time regardless of which ops your model graph contains
# — the EP itself initializes against the full set and refuses to come
# up if any is missing (observed: ``cufft64_11.dll could not be loaded …
# Falling back to CPU``). Removing any of them silently demotes the
# server to CPU at runtime.
gpu = [
    "onnxruntime-gpu>=1.18.1",
    "nvidia-cublas-cu12>=12.4",
    "nvidia-cudnn-cu12>=9.0",
    "nvidia-cuda-runtime-cu12>=12.4",
    "nvidia-cuda-nvrtc-cu12>=12.4",
    "nvidia-cufft-cu12>=11.0",
    "nvidia-curand-cu12>=10.3",
    "nvidia-cusparse-cu12>=12.0",
    "nvidia-cusolver-cu12>=11.0",
    "nvidia-nvjitlink-cu12>=12.4",
]
# OpenVINO build — onnxruntime-openvino is the Intel-optimised ORT
# distribution. Ships its own ``OpenVINOExecutionProvider`` that targets
# Intel ARC discrete GPUs, recent Iris Xe / Arc iGPUs, and the CPU
# vector path tuned for Intel cores. Mutually exclusive with the other
# ORT packages (they share the ``onnxruntime/`` package directory — see
# the ``conflicts`` table at the bottom of this file).
#
# When installed, ``OpenVINOExecutionProvider`` is the highest-priority
# EP on Windows + Linux (Intel-first), ahead of DirectML / CUDA — see
# ``src/recorder/infrastructure/device.py::_AUTO_PRIORITY``.
#
# Wheel sizes: ~250 MB on Windows (bundles the OpenVINO runtime DLLs).
# We ship this as a separate installer flavor (see
# ``packaging/electron-builder.openvino.yml``) rather than the default.
openvino = ["onnxruntime-openvino>=1.18.1"]
# Optional sentence-finished classifier (DistilBERT via transformers).
# Fail-soft: the adapter falls back to ``is_available() == False`` if these
# aren't installed.
#
# transformers floor is ``>=5`` (not the old ``>=4.30,<5``) because the core
# package now pins ``huggingface-hub>=1.0``: every transformers ``<5`` caps
# ``huggingface-hub<1.0``, which is unsatisfiable against that floor. The
# first transformers line that allows hub 1.x is the 5.x series
# (``huggingface-hub>=1.5,<2``). ``DistilBertClassifier`` only touches the
# stable ``from_pretrained`` / ``DistilBert*`` surface, which is unchanged
# across the 4.x→5.x bump. This extra is opt-in and not installed in the
# shipped builds, so the bump is invisible to default users.
sentence-classifier = ["torch>=2.0", "transformers>=5,<6"]

# Text-to-speech (Kokoro-82M ONNX). Bundled into the standalone exe but
# disabled by default at runtime — the TTS feature is opt-in from the
# Settings UI. Confirmed torch-free: kokoro-onnx pulls only onnxruntime
# (shared with the STT path), espeakng-loader (bundles the espeak-ng DLL
# inside the wheel — no separate Windows install needed), phonemizer-fork,
# and numpy. See ``examples/kokoro-onnx/pyproject.toml`` for the upstream
# dep declaration.
tts = ["kokoro-onnx>=0.5.0"]

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.0",
    "hypothesis>=6.100",
    "mypy>=1.8",
    "ruff>=0.3",
    "pre-commit>=3.0",
    # PyInstaller is the packager for the standalone ``stt-server.exe``
    # that the Electron app bundles via ``extraResources``. ``pyinstaller-hooks-contrib``
    # ships the upstream hook for ``huggingface_hub``, ``numpy`` etc. — saves us
    # from writing them by hand. CI installs this group via ``uv sync --group dev``.
    "pyinstaller>=6.5",
    "pyinstaller-hooks-contrib>=2024.7",
    # Only used by ``tests/integration/test_download_progress_e2e.py`` for
    # pretty progress output during dev. Not bundled into the standalone exe.
    "rich>=13.0",
    # Hand-installed dev tooling that used to live only in the local ``.venv``
    # (never declared), so every ``uv sync`` pruned it. Declared here now so it
    # survives. None of these are imported by ``src/`` or bundled into the exe.
    #
    #   - ``mutmut``      — mutation testing (the Python counterpart to the
    #                       frontend's Stryker). Pinned to the 2.x line: that's
    #                       the version that was in the venv, and 3.x swaps its
    #                       engine to libcst/textual while dropping the
    #                       pony/parso/glob2/junit-xml machinery 2.x pulls.
    #   - ``libcst``      — concrete-syntax-tree lib for ad-hoc codemods.
    #   - ``textual``     — TUI toolkit (pulls the markdown-it/linkify chain).
    #   - ``setproctitle``— set the process title for long-running dev scripts.
    "mutmut>=2.5,<3",
    "libcst>=1.8",
    "textual>=8.0",
    "setproctitle>=1.3",
]

[tool.uv]
link-mode = "copy"
# CPU, GPU (CUDA) and DirectML ORT wheels are mutually exclusive — they
# share the ``onnxruntime/`` package directory, so picking more than one
# would corrupt the install (whichever sync ran last would overwrite the
# other's .pyd files). uv enforces the constraint at resolution time.
conflicts = [
    [
        { extra = "cpu" },
        { extra = "gpu" },
        { extra = "directml" },
        { extra = "openvino" },
    ],
]

# Resolver-level metadata patch for openwakeword: upstream's wheel hard-pins
# ``onnxruntime`` (the CPU package). If left alone, ``uv sync --extra gpu``
# pulls BOTH ``onnxruntime`` and ``onnxruntime-gpu`` into the same venv —
# they share the ``onnxruntime/`` package directory, so the CPU install
# overwrites the GPU ``.pyd`` files and CUDA silently stops working.
#
# uv's ``dependency-metadata`` table lets us override what uv THINKS the
# package requires, scoped to this one package (unlike a global
# ``override-dependencies``, which would also kneecap the ``cpu`` extra
# below). The installed openwakeword files are unchanged — at runtime,
# ``onnxruntime-gpu`` provides the ``onnxruntime`` import that openwakeword
# expects, and the ``cpu`` extra continues to pull in ``onnxruntime``
# explicitly when selected.
#
# Mirrors upstream's ``Requires-Dist`` set verbatim with the single
# ``onnxruntime <2,>=1.10.0`` line removed. Bump ``version`` and re-check
# the list whenever openwakeword is upgraded.
[[tool.uv.dependency-metadata]]
name = "openwakeword"
version = "0.6.0"
requires-dist = [
    "tqdm <5.0,>=4.0",
    "scipy <2,>=1.3",
    "scikit-learn <2,>=1",
    "requests <3,>=2.0",
    "tflite-runtime <3,>=2.8.0 ; platform_system == 'Linux'",
]

[tool.uv.sources]
# onnx-asr lives at https://github.com/dahshury/onnx-asr (WinSTT-side fork of
# istupakov/onnx-asr) — pinned to a specific commit on feat/lifecycle-close
# for reproducibility. uv resolves & caches it like any other git dependency,
# so no local checkout is required for ``uv sync``. To hack on onnx-asr
# alongside WinSTT, clone the fork as a sibling folder and temporarily swap
# this entry for ``{ path = "../../onnx-asr", editable = true }``.
onnx-asr = { git = "https://github.com/dahshury/onnx-asr.git", rev = "7e235c28b514da5bd7049d4381c2e8d52a017951" }

[project.scripts]
stt-server = "src.stt_server.server:main"
dev = "src.stt_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E","W","F","I","UP","B","SIM","ANN","RUF"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pyaudio.*","pyaudiowpatch.*","webrtcvad.*","pvporcupine.*","openwakeword.*","scipy.*","websocket.*","websockets.*","tqdm.*","huggingface_hub.*","onnx_asr.*","onnx.*","onnxruntime.*","torch.*","transformers.*","psutil.*","nvidia.*","pynvml.*","kokoro_onnx.*","rapidfuzz.*","jellyfish.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-v --cov=src --cov-report=term-missing --no-cov-on-fail --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
omit = [
    "tests/*",
    "src/building_blocks/terminal.py",
    "src/recorder/infrastructure/*",
    "src/recorder/bootstrap.py",
    "src/recorder/client.py",
    "src/stt_server/*",
    # TTS subsystem — infrastructure (Kokoro adapter, asset downloader)
    # and bootstrap are I/O-bound integration code; the domain port and
    # config models remain in scope for the coverage gate.
    "src/synthesizer/infrastructure/*",
    "src/synthesizer/bootstrap.py",
    "src/synthesizer/__init__.py",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_also = [
    "^\\s*\\.\\.\\.\\s*$",
    "pragma: no cover",
]
