[package]
name = "winstt"
version = "0.1.0"
description = "WinSTT — Windows speech-to-text"
authors = ["dahshury", "WinSTT contributors", "cjpais (Handy foundation)"]
edition = "2021"
license = "MIT"
default-run = "winstt"
# NOTE(port): [lib] name stays `handy_app_lib` for now (main.rs references it);
# rename to winstt_app_lib during the compile loop. Tracked in app/PORT/PROGRESS.md.

[profile.dev]
incremental = true # Compile your binary in smaller steps.
# Smaller debug info dramatically cuts MSVC link time (full PDB generation
# dominates the link of ~1100 static deps + WebView2). "line-tables-only" keeps
# panic/backtrace line numbers but drops the heavy variable/type info you only
# need under a step debugger. Pairs with the lld-link linker in /.cargo/config.toml.
debug = "line-tables-only"

# Optimize DEPENDENCIES only — our own `winstt` crate stays at opt-level 0 so
# incremental leaf rebuilds stay fast. Without this, debug-level numeric crates
# (ort / ndarray / rustfft / symphonia / whisper) make dev-mode RUNTIME crawl.
# Deps are cached after the first build, so this does NOT slow incremental
# rebuilds; it only costs a one-time recompile the first time it's enabled.
[profile.dev.package."*"]
opt-level = 2

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "handy_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
# Opt-in CUDA execution provider for the ONNX STT engine. The shipped Windows build
# is DirectML (compiled via transcribe-rs's `ort-directml`), and the resolver overrides
# CUDA→CPU on non-CUDA targets, so this is a build-time opt-in. Pulls in ort's CUDA EP
# so `ort::ep::CUDA` exists when the feature is enabled (whisper.rs `Accelerator::Cuda` arm).
cuda = ["ort/cuda"]
# DEBUG-ONLY context-awareness extras (`commands::context::debug_read_context`); mirrors
# CONTEXT_PLAYGROUND_ENABLED in the Electron build. Off in shipped builds. NOTE: the live
# playground commands (`context_playground.rs`) are de-gated and compile unconditionally;
# this gate only covers the older `debug_read_context` mode probe.
context-playground = []

# [[bin]]
# name = "cli"
# path = "src/audio_toolkit/bin/cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[dependencies]
once_cell = "1"
tauri = { version = "2.10.2", features = [
  "protocol-asset",
  "macos-private-api",
  "tray-icon",
  'image-png',
  "devtools",
] }
tauri-plugin-log = "2.7.1"
tauri-plugin-opener = "2.5.2"
tauri-plugin-store = "2.4.1"
tauri-plugin-os = "2.3.2"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-macos-permissions = "2.3.0"
tauri-plugin-process = "2.3.1"
rusqlite_migration = "2.3"
tauri-plugin-fs = "2.4.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdev = { git = "https://github.com/rustdesk-org/rdev" }
cpal = "0.16.0"
anyhow = "1.0.95"
rubato = "0.16.2"
# Real RAM detection for the model-download fitness heuristics (the "RAM: unknown"
# fix). Already in the dep graph transitively; pinned to the same version.
sysinfo = { version = "0.38", default-features = false, features = ["system"] }
hound = "3.5.1"
log = "0.4.25"
env_filter = "0.1.0"
tokio = "1.43.0"
vad-rs = { git = "https://github.com/cjpais/vad-rs", default-features = false }
enigo = "0.6.1"
rodio = { git = "https://github.com/cjpais/rodio.git" }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
futures-util = "0.3"
rustfft = "6.4.0"
strsim = "0.11.0"
natural = "0.5.0"
regex = "1"
chrono = "0.4"
rusqlite = { version = "0.37", features = ["bundled"] }
tar = "0.4.44"
flate2 = "1.0"
sha2 = "0.10"
transcribe-rs = { version = "0.3.8", features = ["whisper-cpp", "onnx"] }
# WinSTT unified ONNX STT engine (blueprint S2). ort/ndarray already resolve to one version each
# via transcribe-rs (ort =2.0.0-rc.12, ndarray 0.17.2 — Gate 1+2 satisfied); declared direct so
# winstt/stt can `use ort`. directml EP + dylib loading come from transcribe-rs's ort-directml feature.
ort = { version = "=2.0.0-rc.12", features = ["ndarray", "half"] }
ndarray = "0.17.2"
thiserror = "2"
# WinSTT port — remaining subsystem deps (versions per app/PORT/00_cargo_additions.md, verified 2026-05)
hf-hub = "1.0.0-rc.1"            # HF snapshot resolver for STT model files (resolver/download)
prost = "0.13"                   # ONNX-proto edit for the fp16 decoder patch (03_stt_engine.md §6.1)
tokenizers = { version = "0.22.1", default-features = false, features = ["onig"] }  # DistilBERT + custom models
ollama-rs = "0.3.4"              # native Ollama /api/* (pull progress not OpenAI-compatible)
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }        # diag bundle
keyring = "4.0.1"                # encrypted API keys at rest
symphonia = { version = "0.6.0", default-features = false, features = ["wav", "pcm", "adpcm", "mp3", "isomp4", "aac", "flac", "ogg", "vorbis"] }  # file-transcribe decode
base85 = "2.0.0"                 # Whisper alignment-heads table (RFC1924)
half = "2"                       # f16 tensor element type (matches ort's half)
# sherpa-onnx ships only /MT (static-CRT) Windows libs; the `static` default clashes with Rust's /MD
# CRT (LNK2038/LNK2005). Use `shared` → link sherpa-onnx as a DLL so its /MT CRT stays isolated.
# Ship sherpa-onnx.dll alongside the exe (it lands in target/<profile>/ via the build).
sherpa-onnx = { version = "1.13.2", default-features = false, features = ["shared"] }  # KWS wake word + diarization embedder
# TTS: kokoroxide DROPPED (pins yanked ort ^1.16, conflicts with our ort 2.0.0-rc.12).
# Instead we run the Kokoro-82M ONNX on OUR ort 2.0.0-rc.12 + an espeak-ng phonemizer
# (same runtime as STT; WinSTT is open-source so espeak-ng GPL-v3 is fine). See app/PORT/06_tts.md.
handy-keys = "0.2.4"
ferrous-opencc = "0.2.3"
# TTS G2P: in-process espeak-ng phonemizer. We dlopen the espeak-ng shared lib
# (espeak-ng.dll on Windows) and call espeak_TextToPhonemes directly — the SAME
# path the Electron app's `phonemizer`/`espeakng_loader` takes via ctypes — so
# there is NO per-sentence subprocess spawn (the CLI shell-out was slower on
# short sentences). Already in the dep graph (transitive); pinned direct.
libloading = "0.8"
clap = { version = "4", features = ["derive"] }
specta = { version = "=2.0.0-rc.22", features = ["serde_json"] }
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
tauri-plugin-dialog = "2.6"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.5.1"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-single-instance = "2.3.2"
tauri-plugin-updater = "2.10.0"

[target.'cfg(windows)'.dependencies]
# WinSTT port: dropped `whisper-vulkan` (needs the Vulkan SDK). Our STT engine is unified ONNX on
# `ort`/DirectML (blueprint S2), so whisper.cpp's GPU backend is unused; whisper-cpp (from the base
# dep) falls back to its CPU backend. Tracked in app/PORT/PROGRESS.md.
transcribe-rs = { version = "0.3.3", features = ["ort-directml"] }
wasapi = "0.23.0"  # WASAPI loopback capture for listen mode
windows = { version = "0.61.3", features = [
  "Win32_Media_Audio_Endpoints",
  "Win32_Media_Audio",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Com",
  "Win32_System_Variant",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
] }
winreg = "0.55"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
transcribe-rs = { version = "0.3.3", features = ["whisper-metal"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk-layer-shell = { version = "0.8", features = ["v0_6"] }
gtk = "0.18"
transcribe-rs = { version = "0.3.3", features = ["whisper-vulkan"] }

[patch.crates-io]
tauri-runtime = { git = "https://github.com/cjpais/tauri.git", branch = "handy-2.10.2" }
tauri-runtime-wry = { git = "https://github.com/cjpais/tauri.git", branch = "handy-2.10.2" }
tauri-utils = { git = "https://github.com/cjpais/tauri.git", branch = "handy-2.10.2" }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "unwind"
